# AutoResearch

./: .gitignore  CHANGELOG.md  baseline.json  journal.jsonl  prepare.py  program.md  revise.py
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  gate_patch_stale.py  pyproject.toml
backend/app/: cli.py  main.py
backend/app/agent/: __init__.py  context.py  dedup.py  estimate.py  llm.py  validator.py
backend/app/api/: schemas.py
backend/app/core/: config.py  db.py  redis_client.py
backend/app/evaluators/: __init__.py  base.py  command.py  llm_judge.py  registry.py
backend/app/folders/: __init__.py  ingest.py
backend/app/git_service/: __init__.py  service.py
backend/app/journal/: __init__.py  journal.py
backend/app/llm/: __init__.py  anthropic_router.py  base.py  openai_router.py  router.py
backend/app/models/: __init__.py  enums.py  evaluator.py  experiment.py  folder.py  run.py  secret.py  session.py
backend/app/secrets/: __init__.py  store.py
backend/app/tasks/: __init__.py  apply_edit.py  celery_app.py  chain.py  decide.py  loop.py  plan.py  run_experiment.py  score.py  (+1 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_command_evaluator.py  test_context_builder.py  test_decide.py  test_dedup.py  test_estimate_endpoint.py  test_evaluators_endpoint.py  test_folders_endpoint.py  test_git_service.py  test_journal.py  test_llm_router.py  test_loop.py  test_review_endpoint.py  test_score_routing.py  test_sessions_endpoint.py  test_sprint2.py  test_sprint3.py  test_sprint5.py  test_stale_reviews.py  test_validator.py
(+487 files in other folders)
